# excel-ops-mcp

./: .gitignore  AGENTS.md  README.md  install.ps1  install.sh  pyproject.toml
docs/: DEVELOPMENT.md  RESEARCH_AND_COMPETITORS.md
evals/: README.md  make_desktop_prompt.py  run_checks.py  run_compare.py  run_eval.py  run_suite.sh
examples/: Financial_Report.xlsx  saas.xlsx
excel_mcp/: __init__.py  best_source.py  cli.py  config.py  describe.py  duckdb_engine.py  normalizers.py  policy.py  range_read.py  regions.py  schemas.py  server.py  session.py  summarize.py  tools.py  trace.py  utils.py  values.py  writes.py
tasks/: 00-excel-mcp-roadmap.md  01-python-mcp-package-foundation.md  02-excel-session-registry-and-cache.md  03-excel-workbook-describe.md  04-region-and-header-detection.md  05-duckdb-materialization-and-sql-query.md  06-targeted-range-inspection.md  07-structured-batch-write-operations.md  08-dry-run-staging-commit-and-diff.md  09-audit-log-and-source-citation-model.md  10-token-efficiency-caps-and-anti-loop-telemetry.md  11-financial-operations-recipes-and-examples.md  12-workbook-fidelity-and-regression-fixtures.md  13-public-tool-contracts-and-json-schemas.md  14-security-and-filesystem-sandbox-policy.md  15-implementation-milestones-and-release-gates.md  16-excel-cli-alternative.md  17-project-scoped-excel-ops-skill.md  18-cli-parity-tests-against-mcp-tool-layer.md  19-cli-usage-recipes-for-operations-work.md  20-user-readme-and-install-guide.md  21-developer-publishing-guide.md  22-github-release-to-pypi-automation.md  23-agent-agnostic-excel-ops-skill-guidance.md  24-computed-values-resolution.md  25-eval-harness-subagent-judge.md  26-saas-model-eval-suite.md  27-agent-understandability-rules.md  28-tag-driven-pypi-release.md  (+1 more)
(+60 files in other folders)
